Fix (#178) - alignment of media indicator

--- a/MvcWebRole1/Content/styles/mm.common.css
+++ b/MvcWebRole1/Content/styles/mm.common.css
@@ -133,7 +133,7 @@
     color:red;
     margin-left: 20px;
     margin-top: 10px;
-
+    margin-right: 50px;
 }
 .rate-1 {
     background-position: 0px 0px;
